--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -3,15 +3,19 @@
 
 name: Node.js CI
 
+#Controls when the workflow will run
 on:
+  #Triggers the workflow on push or pull request events but only for main branch
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
+#A Workflow is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  #This worlflow contains a single job called "build"
   build:
-
+    #The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     strategy:
@@ -19,7 +23,9 @@ jobs:
         node-version: [12.x, 14.x, 16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
+    #Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    #Checks out your repostiroy under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
