--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,6 +32,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    #running the Lint process as üart of our CI pipeline
     - run: npm ci
+    - run: npx eslint --fix-dry-run index.js
     - run: npm run build --if-present
     - run: npm test
