--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.17.3"
   },
   "devDependencies": {
+    "eslint": "^8.17.0",
+    "eslint-plugin-react": "^7.30.0",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.15",
     "supertest": "^6.2.3"
