--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,6 +34,6 @@ jobs:
         cache: 'npm'
     #running the Lint process as üart of our CI pipeline
     - run: npm ci
-    - run: npm eslint --fix-dry-run index.js
+    - run: npx eslint --fix-dry-run index.js
     - run: npm run build --if-present
     - run: npm test
